--- a/baobab/runner/examples/instructions/.notused.md
+++ b/baobab/runner/examples/instructions/.notused.md
@@ -4,7 +4,7 @@ macro how to install postgresql:
 ## state object
 
 
-!!app.state.set name:'mypostgresql'
+!!app.state.set name:'mypostgres'
     id:""
     wish:"active"               #init, built, installed, configured, active, stopped
 
@@ -12,7 +12,7 @@ macro how to install postgresql:
 
 all arguments are optional
 
-!!app.postgresql.define name:'mypostgresql'
+!!app.postgresql.define name:'mypostgres'
     db.path:'/var/db/data'              
     unixsocket.path:'/var/db/socket'    
     tcp.port:5432                       
@@ -23,4 +23,4 @@ all arguments are optional
 
 ## example how to deploy
 
-!!app.deploy name:'mypostgresql'
+!!app.deploy name:'mypostgres'
